# xindata-income-analyzer

./: .gitignore  README.md  __main__.py  config.json  main.py  pyproject.toml  report.ipynb
playground/: cached_lm_GPT2Tokenizer_1024_this.txt  learn_dataset.ipynb  test_dataset.py  test_gemini.py  test_gpt2.py  test_openai.py  test_ru_eng_llm.py  this.txt
xindata_income_analyzer/: cli_controller.py
xindata_income_analyzer/cli/: cli_controller.py
xindata_income_analyzer/config/: config.py
xindata_income_analyzer/model/: text_generator.py  text_generator_gpt2.py  text_generator_mistral.py
xindata_income_analyzer/model/preprocessing/: constants.py  pretrain.py  utils.py
