[project]
name = "xindata-income-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.12",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
