[project]
name = "xindata-income-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "azure-ai-inference>=1.0.0b9",
    "google-genai>=1.20.0",
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "openai>=1.86.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "transformers>=4.52.4",
]
